--- a/p2.html
+++ b/p2.html
@@ -4,52 +4,42 @@
 		<title>
 		Avargadi | Boutique lamps and shades
 		</title>
-		<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+		
+		<meta charset="utf-8">
+		
+		<link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/lightgrid.css">
-		<link rel="stylesheet" href="css/layout.css">
+		<link rel="stylesheet" href="css/p2.css">
+		<link rel="stylesheet" href="css/modal.css">
 		
 		<script src="js/jquery.js"></script>
 		<script src="js/app.js"></script>
 	</head>
 	
 	<body>
-		<div class="row">
 		
+		<!-- Header -->
+		<section class="row section1">
 			<header class="site-header">
-				<nav class="header-nav">
-					<a class="nav-item">
-					About us
-					</a>
-					<a class="nav-item-title">
-					Avargadi
-					</a>
-					<a class="nav-item">
-					Our products
-					</a>
+				<nav class="header-nav clearfix">
+					<span class="nav-item col-4" data-action="aboutUs">About us</span>
+					<h2 class="nav-title col-4">Avargadi</h2>
+					<span class="nav-item col-4 last" data-action="registerInterest">Register interest</span>
 				</nav>
 			</header>
-			
-			<section class="section-1 col-8 offset-2">
-				<h2 class="section-title">
-				We create boutique lamps & shades
-				</h2>
-			</section>
-			
-			<section class="section-2 col-8 offset-2">
-				<h4>
-				About us
-				</h4>
-				<p>
-				We are a small group of craftsman based in Melbourne, Australia. We specialize in making lamps and shades for a variety of occasions.
+		</section>
+		
+		<!-- Content -->
+		<section class="row section2" id="about-us">
+			<article class="content col-8 offset-2">
+				<h2>About us</h2>
+				<p>We are a group of people obsessed with creating great looking designer lamps.
 				</p>
-			</section>
-			
-			<footer class="col-8 offset-2 site-footer">
-				Made by shash7
-			</footer>
-			
-		</div>
-	
+				<p>Our designs are created through a laborious process of over eight months. After the design is finalized, we manufacture with the finest materials available and ship them from the states.</p>
+				<p>We are based in Melbourne, Australia. Please come visit us if you are nearby.</p>
+			</article>
+		</section>
+		
 	</body>
 
 </html>
