--- a/p2.html
+++ b/p2.html
@@ -35,7 +35,7 @@
 				<h2>About us</h2>
 				<p>We are a group of people obsessed with creating great looking designer lamps.
 				</p>
-				<p>Our designs are created through a laborious process of over eight months. After the design is finalized, we manufacture with the finest materials available and ship them from the states.</p>
+				<p>Our designs are created through a laborious process of over eight months. After the design is finalized, we manufacture with the finest materials available and ship them from the 'States.</p>
 				<p>We are based in Melbourne, Australia. Please come visit us if you are nearby.</p>
 			</article>
 		</section>
