--- a/p2.html
+++ b/p2.html
@@ -10,9 +10,10 @@
 		<link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/lightgrid.css">
 		<link rel="stylesheet" href="css/p2.css">
-		<link rel="stylesheet" href="css/modal.css">
+		<link rel="stylesheet" href="css/jquery.bxslider.css">
 		
 		<script src="js/jquery.js"></script>
+		<script src="js/jquery.bxslider.min.js"></script>
 		<script src="js/app.js"></script>
 	</head>
 	
@@ -27,6 +28,14 @@
 					<span class="nav-item col-4 last" data-action="registerInterest">Register interest</span>
 				</nav>
 			</header>
+			
+			<div class="slider-window">
+				<div class="slider">
+					<img class="slide" src="img/slide1.jpg">
+					<img class="slide" src="img/slide2.jpg">
+					<img class="slide" src="img/slide3.jpg">
+				</div>
+			</div>
 		</section>
 		
 		<!-- Content -->
@@ -37,6 +46,8 @@
 				</p>
 				<p>Our designs are created through a laborious process of over eight months. After the design is finalized, we manufacture with the finest materials available and ship them from the 'States.</p>
 				<p>We are based in Melbourne, Australia. Please come visit us if you are nearby.</p>
+				<br>
+				
 			</article>
 		</section>
 		
