Added modal window

--- a/p2.html
+++ b/p2.html
@@ -11,8 +11,10 @@
 		<link rel="stylesheet" href="css/lightgrid.css">
 		<link rel="stylesheet" href="css/p2.css">
 		<link rel="stylesheet" href="css/jquery.bxslider.css">
+		<link rel="stylesheet" href="css/modal.css">
 		
 		<script src="js/jquery.js"></script>
+		<script src="js/modal.js"></script>
 		<script src="js/jquery.bxslider.min.js"></script>
 		<script src="js/app.js"></script>
 	</head>
